maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:18: error: not found: value xMinY
    xMinY = 0;
    ^IslandMaze:23: error: value && is not a member of Unit
      if (estMurNord() && (getY() < minY || minY == -1))
                       ^IslandMaze:26: error: not found: value xMinY
        xMinY = getX();
        ^IslandMaze:32: error: not found: value xMinY
    while (getX() != xMinY && getY() != minY) keepHandOnSideWall();
                     ^IslandMaze:68: error: Boolean does not take parameters
  return isMurNord();
                  ^IslandMaze:68: warning: enclosing method estMurNord has result type Unit: return value discarded
  return isMurNord();
  ^